# Rustle

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: app.rs  main.rs  platform.rs  utils.rs
src/api/: ncm.rs  ncm_api.rs
src/api/ncm_api/: encrypt.rs  model.rs
src/app/: helpers.rs  message.rs  state.rs  update.rs  view.rs
src/app/update/: discover.rs  import.rs  keyboard.rs  lyrics.rs  mpris.rs  navigation.rs  ncm.rs  playback.rs  player_controller.rs  playlist.rs  queue.rs  router.rs  search.rs  settings.rs  toast.rs  tray.rs  window.rs
src/audio/: analyzer.rs  chain.rs  equalizer.rs
src/features/lyrics/engine/: gpu_pipeline.rs  per_line_blur.rs  pipeline.rs  sdf_cache.rs  vertex.rs
src/features/lyrics/parser/: online.rs
src/i18n/: en.rs  zh.rs
src/platform/: media_controls.rs  tray.rs  window.rs
src/platform/media_controls/: souvlaki_impl.rs
src/platform/window/: linux.rs  macos.rs  windows.rs
src/ui/: icons.rs  theme.rs
src/ui/animation/: hover.rs
src/ui/components/: exit_dialog.rs  sidebar.rs  window_controls.rs
src/ui/effects/: background.rs  textured_background.rs
src/ui/pages/: audio_engine.rs  discover.rs  home.rs  playlist.rs  search.rs  settings.rs
src/ui/primitives/: virtual_list.rs
src/ui/widgets/: multi_track_slider.rs  play_mode_button.rs  toast.rs  vertical_slider.rs
