[package]
name = "rustle"
version = "0.1.8"
edition = "2024"
description = "A modern music player built with Rust and iced, supporting NetEase Cloud Music"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ArcticFoxNetwork/Rustle"
homepage = "https://github.com/ArcticFoxNetwork/Rustle"
readme = "README.md"
keywords = ["music", "player", "netease", "iced", "gui"]
categories = ["multimedia::audio"]

[dependencies]
iced = { version = "=0.15.0-dev", features = ["tokio", "advanced", "canvas", "image", "svg", "debug"] }
iced_anim = "0.3.1"
bytemuck = { version = "1.25", features = ["derive"] }
tokio = { version = "1.50", features = ["full"] }
rodio = { version = "0.21.1", features = ["symphonia-all"] }
spectrum-analyzer = "1.7.0"
rtrb = "0.3.3"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
lofty = "0.22.4"
walkdir = "2.5.0"
directories = "6.0.0"

serde = "1.0.228"
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow = "1.0.102"
once_cell = "1.21.4"

# Local playlist import
rayon = "1.11.0"
encoding_rs = "0.8.35"
notify = { version = "8.2", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rfd = "0.15.4"
async-stream = "0.3.6"
rand = "0.9"
cosmic-text = "0.15.0"
parking_lot = "0.12"

# SDF text rendering
ttf-parser = "0.25"
sdf_glyph_renderer = "1.0"
ab_glyph = "0.2"
quick-xml = "0.37.5"
futures-util = "0.3.32"

# Netease Cloud Music API
qrcode-generator = "5.0"
cookie_store = "0.21.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "json", "gzip", "stream"] }
lazy_static = "1.5"
urlqstring = "0.2"
md5 = "0.7"
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
rsa = "0.9.10"
hex = "0.4"
base64 = "0.22"
regex = "1.12"
urlencoding = "2.1"
dirs = "6.0.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.9.0"
ksni = { version = "0.3.3", default-features = false, features = ["tokio"] }

[patch.crates-io]
iced = { git = "https://github.com/Fei-xiangShi/iced.git", branch = "master" }
smithay-client-toolkit = { git = "https://github.com/Fei-xiangShi/client-toolkit.git", branch = "master" }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = "0.21.3"
souvlaki = "0.8.3"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1.30"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
